<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder"/>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:text="@string/result" />

        <Button
            android:id="@+id/save_classification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:text="@string/save_classification"/>

        <Button
            android:id="@+id/remove_classification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:visibility="gone"
            android:text="@string/remove_classification"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:text="@string/related_article"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/article_rv"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/no_article_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_article"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/error_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_message"/>

    </LinearLayout>
</ScrollView>